# app.pinnings

./: Dockerfile  Procfile  README.md  index.yaml  pyproject.toml  sample.ipynb
.github/actions/: action.yaml
.github/workflows/: action.yaml  post_changes.py  release.yaml
apin/: __init__.py  app.py  cli.py
apin/core/: scheduler.py  types.py
apin/core/ai/: kagent.py
apin/core/builder/: GitContext.py  templating.py
apin/core/ops/: __init__.py  inspector.py  utils.py
application-sets/core/: application-set.yaml  mother-application.yaml  testpod.yaml  workflow-application.yaml
charts/mother-deployment/: Chart.yaml  values.yaml
charts/mother-deployment/templates/: apin-scheduler.yaml  deployment.yaml  scheduler.yaml  service.yaml
stack/argo/argo-cd/: cluster-role-binding.yaml
stack/argo/argo-workflows/: application.yaml
stack/modules/mother-deployment/templates/: deployment.yaml
stack/modules/workflow/: kustomization.yaml  uber-workflow.yaml
stack/test/: Chart.yaml
stack/test/templates/: apin-scheduler.yaml
